# poker-game

./: .gitignore  README.md  docker-compose.yaml
poker_backend/: .dockerignore  .gitignore  Dockerfile  injection.py  main.py  pyproject.toml
poker_backend/config/: database.py  game.py  injection.py  settings.py
poker_backend/src/: injection.py  main.py  models.py
poker_backend/src/config/: database.py  injection.py
poker_backend/src/core/database/: create_tables.py  database.py
poker_backend/src/hand_package/domain/entities/: hand.py
poker_backend/src/hand_package/domain/services/: hand_service.py  poker_service.py
poker_backend/src/hand_package/domain/value_objects/: action.py  hand.py
poker_backend/src/hand_package/infrastructure/: injection.py
poker_backend/src/hand_package/infrastructure/repository/: hand_repository.py
poker_backend/src/hand_package/infrastructure/services/: hand_service.py  poker_service.py
poker_backend/src/hand_package/presentation/routes/: route.py
poker_backend/src/hand_package/presentation/schema/: action.py  hands.py
poker_backend/tests/: conftest.py  test_health.py
poker_backend/tests/hand_package/presentation/routes/: test_route.py
poker_frontend/: .gitignore  Dockerfile  package-lock.json  package.json  playwright.config.ts
poker_frontend/app/: layout.tsx  page.tsx
poker_frontend/components/: Actions.tsx  HandHistory.tsx  PlayLog.tsx  Setup.tsx
poker_frontend/components/common/: ThemeToggle.tsx
poker_frontend/lib/: apiService.ts  stateProvider.tsx  store.ts
poker_frontend/lib/feature/hand/: handSlice.ts
poker_frontend/lib/feature/playLog/: playLogSlice.ts
poker_frontend/providers/: ThemeProvider.tsx
(+4 files in other folders)
